--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header">
-        <h1 class="logo">Whats up</h1>
+        <h1 class="logo">Boost Creeps</h1>
         <nav class="nav">
             <a>Home</a>
             <a>Profile</a>
